# PiPowerMgt

./: .gitignore  LICENSE  Makefile  README.md
Circuit/: PiPower.fzz
arduino/: Makefile  power_manager.ino  serial.ino
arduino/i2c_scan/: bare_boards.txt  i2c_slave.ino
arduino/i2c_slave/: Makefile  i2c_slave.ino
arduino/watchdog/: README.md  actions.h  kicks.h  payload.h  pi.cpp  pi.h  tasks.cpp  tasks.h  watchdog.ino
pi/: .gitignore  Makefile.am  README.md  buildFromClean.sh  configure.ac  i2ctest.cpp  payload.h  slavetest.cpp  wdactions.cpp  wdactions.h  wdactions_libtest.cpp  wdactions_test.cpp
pi_py/: bsc_arduino.py  setup.py
pi_py/wdactions/: cli.py  watchdog.py  wdsystemd.py
pigpio/: install_pigpio.sh
